MQ-8741 Add LLRN and checkums fot 7.5.8 EA

--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,136 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 781 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 882 fixed issues.
+
+## 7.5.8
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-9638` -- Medium -- cisco stack - environment information (power supplies and fans)
+- `NIM-15077` -- Highest -- AWS TGW - VPC attachment routes refactor (static & propagated)
+- `NIM-15229` -- High -- Investigate wrong BGP neighbor information in BGP Neighbors table when devices have same IPs (blocked - pending PSQL query refactor)
+- `NIM-21068` -- High -- Inventory - EoL Milestones - Duplicate entries still seen
+- `NIM-21071` -- High -- Path Lookup shows incorrect Passing Traffic value
+- `NIM-21173` -- Highest -- Cisco ACI - get correct sPcTag for transparent firewall on ingress leaf
+- `NIM-21204` -- High -- Mikrotik LLDP-only neighbors missing from xDP table
+- `NIM-21207` -- Highest -- ipf-cli-config -u silently fails in PSQL if there's already admin user
+- `NIM-21209` -- Medium -- New version doesnt fix dot1x indicator, shows as unknown - related to NIM-17875
+- `NIM-21286` -- High -- F5OS - command timeouts
+- `NIM-21289` -- Highest -- Upgrade failing on configuration import from 7.3 to 7.5
+- `NIM-21290` -- High -- commands/hpe/_arubaIap/portStatusDetail Couldn't validate AP with the error "speed" must be a number
+- `NIM-21291` -- Medium -- IPv4-mapped IPv6 address not recognized/compared correctly with normal IPv6
+- `NIM-21292` -- High -- Some Aruba IAP are missing the interfaces
+- `NIM-21295` -- High -- F5OS Documentation Broken
+- `NIM-21296` -- High -- Update F5OS 7.5 Release Notes
+- `NIM-21298` -- Medium -- Cisco ACI - PBR evaluation is not executed if ACL policy is already applied
+- `NIM-21299` -- Medium -- Cisco ACI - ACL - add destination mac to BD GW tests + add redirect rules to ACL chain to avoid deny packet
+- `NIM-21304` -- High -- Fortigate FW specific context missing all rules on IPF
+- `NIM-21311` -- Medium -- ABMapResultError: Error validating WAN link 'LTE-AVIEW-AWB (155.166.155.163)' - "interfacesList" must contain at least 1 items
+- `NIM-21323` -- Highest -- BGP Advertised Routes task is completely broken on IPF 7.3
+- `NIM-21327` -- High -- 7.5 Upgrade removed all Saved Diagrams
+- `NIM-21329` -- High -- show ip route detail vrf <vrf> is truncated on CISCO Nexus9000
+- `NIM-21349` -- Medium -- AWS VGW - wrongly loaded dependencies
+- `NIM-21351` -- Highest -- Fortigate - E2EPL FW eval is deny but explicit allow policy is present
+- `NIM-21436` -- Medium -- Unable to save the view
+- `NIM-21441` -- Highest -- Versa routing table missing label - path lookup failing
+- `NIM-21455` -- High -- Fix parsing of L2 VXLAN related properties on Juniper QFX switches
+- `NIM-21456` -- High -- Default Policy OTHERS does not allow user to see Pathlookup
+- `NIM-21457` -- Highest -- Incorrect command to get full vrf routing tables nx-os
+- `NIM-21470` -- Medium -- E2E PL - Cisco ACI - failed to load graph
+- `NIM-21475` -- Medium -- IPv6 Routing Filtering is broken
+- `NIM-21478` -- High -- Fortinet detected as a router in 7.5.7
+- `NIM-21501` -- Highest -- Upgrade 7.3.19 -> 7.5.7 migration fails insert into vLdap null value in column "bindCredentials"
+- `NIM-21504` -- Highest -- E2E PL: ACI switching mode instead of routing
+- `NIM-21510` -- Highest -- IPF 7.3.19 -> 7.5.7 migrations failed, error with backend-cli-tools
+- `NIM-21512` -- Highest -- Cisco missing routing table vrf commands when BGP threshold is disabled
+- `NIM-21514` -- Medium -- UI - wrongly selected filter in expanded filter list after "Save as"
+- `NIM-21518` -- Highest -- Manual upgrade failed 7.5.7-> 7.6.1
+- `NIM-21537` -- Highest -- Can't configure credential without username on IPF >=7.3
+- `NIM-21575` -- High -- Checkpoint VS rules discovery inconsistent accross multiple snapshots
+- `NIM-21584` -- High -- Failures when exporting `Summary of Issues` tables to csv
+- `NIM-21594` -- Highest -- Slow Tasker discovery PSQL query - setCliJobsAsFound
+- `NIM-21595` -- Highest -- Slow Tasker discovery PSQL query - setErrorIpToReady
+- `NIM-21596` -- High -- Slow Tasker discovery PSQL query - getCliTasks
+- `NIM-21608` -- High -- Cannot edit API Token
+- `NIM-21609` -- Highest -- Wrong Policy for `prepared-requests` endpoints
+- `NIM-21610` -- Highest -- RBAC for `/prepared-requests/{preparedRequestId}/execute` does not work at all and only admins can export to CSV
+- `NIM-21618` -- Highest -- Missing relationship in BGP neighbors table
+- `NIM-21622` -- High -- [7.5] - Cisco ACI: APIC model reports % sign
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20248` -- Medium -- Verify 7.5 Upgrade transfers over Vendor API settings (before GA)
+- `NIM-20249` -- Medium -- Verify LDAP / AD works after 7.5 Upgrade (before GA)
+- `NIM-21058` -- Highest -- E2E Path Lookup - increase the limit for FW rules - currently is set to 4K rules
+- `NIM-21158` -- Medium -- Cisco ACI - evaluate security rules on ingress leaf also for external subnets
+- `NIM-21462` -- High -- Mention performance impact of many loaded snapshots
+- `NIM-21472` -- Highest -- Update defaults and validation for snapshots collection in GUI and API
+
+## 7.5.7
+
+### Epics
+
+Epics are high-level features, that may consist of many tasks.
+
+- `NIM-20385` -- Medium -- Fix partitions in queries & tables
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19829` -- Medium -- API tasks/sn wasn't seen in error table
+- `NIM-20099` -- High -- SyslogWorker removing devices from discovery history
+- `NIM-20506` -- Highest -- Service graph -> ACI always deny
+- `NIM-20532` -- Highest -- Cisco ACI - ServiceGraphs - wrongly not matched rule
+- `NIM-20833` -- High -- Mikrotik - missing SNMP data for all devices
+- `NIM-20834` -- High -- Mikrotik - missing NTP data
+- `NIM-20900` -- High -- PE router is missing routing+MPLS data
+- `NIM-20909` -- Medium -- IPF 7.5 Frontend cache flushing
+- `NIM-20920` -- Highest -- Updater reaches heap allocation limit while loading snapshot with full BGP tables
+- `NIM-20963` -- Medium -- neighbors/unidirectional API table is very slow (502)
+- `NIM-20964` -- Medium -- Azure API client returns null
+- `NIM-20972` -- Highest -- Saved Path Check API not working as expected
+- `NIM-20997` -- Medium -- Junos interfaces in the IPF GUI show the speed type as “fixed”, but the interfaces have auto-negotiation enabled.
+- `NIM-21027` -- High -- Huawei tasks/deviceConfig/startup ABTaskMapResultError - Saved config consistency not working
+- `NIM-21032` -- Medium -- Azure - tasks/routingTable - Cannot read properties of undefined (reading 'type')
+- `NIM-21040` -- Medium -- Azure - DROP: routing loop detected
+- `NIM-21053` -- Highest -- Scan worker stuck - doesn't get to Init event received, starting
+- `NIM-21059` -- Highest -- Configuration import does not overwrite the discovery settings
+- `NIM-21067` -- Medium -- ABMapResultError: undefined is not a function
+- `NIM-21070` -- Medium -- Path lookup user defined first hop, interface dropdown requires clicking away from hostname
+- `NIM-21074` -- Highest -- Scan worker exiting with code 246 upon discovery finish
+- `NIM-21097` -- Medium -- Azure - static routes to IPSEC (VNET2VNET) creates loop
+- `NIM-21099` -- Medium -- Azure - duplicate routes created for ER circuit
+- `NIM-21144` -- High -- Cisco ACI - NX-OS routes missing due to negative timestamp
+- `NIM-21155` -- Medium -- Azure VirtualNetworkGateway - Cannot read properties of undefined (reading 'toLowerCase') bugfix
+- `NIM-21175` -- High -- Interface original name missing for EXOS devices
+- `NIM-21182` -- High -- ISIS - Huawei parsing issue
+- `NIM-21191` -- High -- Not converted, deprecated AQL API Table VDC/Devices not removed in 7.5
+- `NIM-21194` -- Medium -- Wrong feature flag used in ipf-migrate postinst file
+- `NIM-21208` -- High -- PSQL techsupport contains vUser - doesn't play nice with ipf-cli-config
+- `NIM-21284` -- High -- Routing table on Arista doesn't work
+- `NIM-21294` -- High -- PSQL Inventory - Sites table query is very slow with 100 loaded snapshots
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-15736` -- Low -- Create CLI interface for the appliance upgrade service
+- `NIM-19653` -- Medium -- eVlanRouted not created for trunk interfaces without vlanId
+- `NIM-20490` -- High -- Saved filters with unsupported cross-column operators should present a warning
+- `NIM-20951` -- Medium -- Azure - normalize resource IDs to lowercase
+- `NIM-20956` -- High -- Get all e2e path tests passing on 7.3 & 7.5 branches
+- `NIM-21026` -- High -- Check discovery code for bluebird Promise.map() usage
+- `NIM-21079` -- High -- reconstructVersaMplsTable slow on f4a40e4b-bf47-40bf-82ee-f48d1a8ad8a6 snapshot
+- `NIM-21080` -- High -- createELinksFromStp slow on f4a40e4b-bf47-40bf-82ee-f48d1a8ad8a6 snapshot
+- `NIM-21085` -- Medium -- Investigate Arango removal in `integrations/postman`
+- `NIM-21088` -- Medium -- Investigate Arango removal in `nae/callhome-test`
+- `NIM-21168` -- Medium -- Use _ci in model calls in the calcSyntaxSearch finish job
 
 ## 7.5.5
 
@@ -274,7 +403,6 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-12702` -- Medium -- API convert controllers to PSQL
 - `NIM-15669` -- Highest -- Arango -> PSQL Upgrade Process [7.5]
 - `NIM-15816` -- High -- Fix queries failing tests
-- `NIM-16494` -- High -- Prepare for PSQL stable release
 - `NIM-17027` -- High -- Transparent FW
 - `NIM-17401` -- High -- Support for IPv6 in GUI
 - `NIM-17744` -- Medium -- OAS Improvements
@@ -285,7 +413,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18696` -- High -- [NAE] Add support for Multi-Segment/tenant SD-WAN routing 7.5
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
-- `NIM-18897` -- Medium -- Cloud scaling groups
+- `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
 - `NIM-18984` -- Medium -- Cloud subnets discovery
 - `NIM-19003` -- Medium -- v6 support for BGP Advertised Routing task
 - `NIM-19078` -- Medium -- Syslogworker improvements
@@ -589,6 +717,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20424` -- Highest -- Database dump is missing in TechSupport UI
 - `NIM-20858` -- Medium -- Release Testing - Data consistency - Portchannel inbound table
 - `NIM-20924` -- Medium -- Use DoublePostgresColumn instead of IntegerPostgresColumn for columns using TIMESTAMP_DOUBLE
+- `NIM-21307` -- Medium -- ABMapResultError: Error validating subinterface 'GE8:4087' - Cannot read properties of undefined (reading 'push')
 
 ### Tasks
 
