added improvements on current path version

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -128,6 +128,10 @@ SHA256 (ESXi8.0-ipfabric-7-5-8+0.ova) = 7d96b5b74c90246b254a43db4bf39479fa85cd16
 MD5 (ESXi8.0-ipfabric-7-5-8+0.ova) = ad19297de5206d5368eb9d65bcf7a0ed
 ```
 
+### Improvements
+
+- In this maintenance release, we optimized the discovery process to address the discovery slowness issues observed in release 7.5.6.
+
 ## v7.5.6 (August 15th, 2025; EA)
 
 ### New Features
