FE/NIM-21747 Add missing GUI permission release note

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -230,6 +230,7 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
   - Categorization by Time Period: Snapshots are intuitively organized based on their creation time.
   - Filtering by Name: Users can easily filter snapshots by their names.
 - **Hostname** and **IP address** typeahead suggestions in the **Path Lookup** forms within **Diagrams** now respect the **Attribute filters** applied in the top bar.
+- Export to CSV feature in tables now requires policy access to the `Prepared requests` endpoints, which are included in the default `tables` policy.
 
 #### Network Discovery
 
