NIM-17726 Mention filter badges in release notes [7.8]

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -44,8 +44,8 @@ tags: ["draft"]
 
 #### GUI
 
-.
-
+- An overview of active filters, with buttons to easily remove them, was added to all tables.
+ 
 #### Path Lookup
 
 .
