NIM-21308 Aruba IAP AOS 10 - doc update [7.8]

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -1,6 +1,5 @@
 ---
 description: In this section, you can find the release notes for `v7.6` releases.
-tags: ["draft"]
 ---
 
 # IP Fabric `v7.8`
@@ -50,9 +49,11 @@ tags: ["draft"]
 
 .
 
-#### Vendor Support
+#### Vendor Support and Improvements
 
-.
+- **Aruba IAP - AOS 10+**
+  - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
+  - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
 
 ### API Endpoint Deprecation
 
