--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -55,6 +55,10 @@ description: In this section, you can find the release notes for `v7.6` releases
   - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
 
+### API Changes
+
+- Introduced a new API error code: `API_VENDOR_CONNECTION_TEST_FAILED`. Updated the AWS API connection tester to use this new error code instead of the previous `API_URL_NOT_REACHABLE`.
+
 ### API Endpoint Deprecation
 
 .
