MQ-8874-add-LLRN-and-checksums-for-7.5.9

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -109,24 +109,31 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
 
 - BGP community settings may not import correctly and may need reconfiguration.
 
-## v7.5.8 (September 25th, 2025; EA)
+## v7.5.9 (October 14th, 2025; EA)
 
 ```
-SHA256 (ipfabric-update-7-5-8+0.tar.zst.sig) = db87084dfd18c3a5b2ef9f5a5d4a749d91d0badca7361d10db11368fff276362
-MD5 (ipfabric-update-7-5-8+0.tar.zst.sig) = 37497b5e98b2ffe3d40f64b38b8f3ec4
-SHA256 (ipfabric-7-5-8+0.qcow2) = 7c0e05e8bd53e52d81dc6d6f6de14123169914b5ef61b4520fe356728db8f956
-MD5 (ipfabric-7-5-8+0.qcow2) = b8418204fe8a3cf8770df7243e4aa61e
-SHA256 (ipfabric-7-5-8+0.vmdk) = 2f8fb6537e4a5aa5711c61dabec36d82ae7eebd16431bf9370c08611e0879b9f
-MD5 (ipfabric-7-5-8+0.vmdk) = 2eb3308605bafaea52fcc38d6a9c54a9
-SHA256 (ipfabric-7-5-8+0.vhdx.zst) = b3a2e8836e11d18d41aff88ddceded55d15442a835476777f0f9ee449777c230
-MD5 (ipfabric-7-5-8+0.vhdx.zst) = c9a3b774e31f26d5e8aa7b5c495b671f
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-8+0.ova) = 4ad2f9037a7419f2e0a467a8907449fa7744314109147f6f2b95a04d92ed30c7
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-8+0.ova) = adea1d815d7928da9b7e06057cd0e96a
-SHA256 (unsupported-ESXi7.0-ipfabric-7-5-8+0.ova) = 533726320d52e55409517e5bc1fd4d359dafb2fe3502a48c7a305a25d9053e56
-MD5 (unsupported-ESXi7.0-ipfabric-7-5-8+0.ova) = a60270ae24d34160584b3ed4c1a2d357
-SHA256 (ESXi8.0-ipfabric-7-5-8+0.ova) = 7d96b5b74c90246b254a43db4bf39479fa85cd16e386aa4f0dd2c990cac06022
-MD5 (ESXi8.0-ipfabric-7-5-8+0.ova) = ad19297de5206d5368eb9d65bcf7a0ed
+MD5 (ipfabric-update-7-5-9+0.tar.zst.sig) = 3e53d832dc42d42b1ca3e46edded3a81
+SHA256 (ipfabric-7-5-9+0.qcow2) = 0b1e05e654ff838a9a2af81e8b95a42cd83e76ac4c00bec3dda5a3a80ada92e7
+MD5 (ipfabric-7-5-9+0.qcow2) = 26d805f32bb133d33dfa3a5c0b132f5f
+SHA256 (ipfabric-7-5-9+0.vmdk) = 3e7500a8f1164e9c638ca14414d60776e622cb2278e00106b4522076084e8412
+MD5 (ipfabric-7-5-9+0.vmdk) = 3c475c8026c37a5f6d31268657c69e34
+SHA256 (ipfabric-7-5-9+0.vhdx.zst) = 95d9940329dda821707a2e9f63b3e03e7e303a44a3ec888ec0d1834101254998
+MD5 (ipfabric-7-5-9+0.vhdx.zst) = b56c8faee6e77bf733cd89ed6f9dce45
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-9+0.ova) = 8eb1f0b6ffb4902deb351c50626cd6de72557a65f0d897a1c85cb9742f3bd474
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-9+0.ova) = cf64159dbdb2385d5f6b90ded1b60915
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-9+0.ova) = b193682f3196d73e5d46f2401096d3b820e9b933b3378baa82ad19dd675cb0d0
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-9+0.ova) = 6d928ae3549fd57cfafa3b28fe3fe958
+SHA256 (ESXi8.0-ipfabric-7-5-9+0.ova) = e2f96ae541aaea01fb5eeaabac708efa81d6c8f9321e8b77067e1c44b52c9269
+MD5 (ESXi8.0-ipfabric-7-5-9+0.ova) = a356ed24a4b1b00eb2cf964a3ab3570d
+
 ```
+
+### Improvements
+
+- Password without a username can be set again.
+- Upgrading from 7.3 to 7.5 reduces disk usage by removing unnecessary data.
+
+## v7.5.8 (September 25th, 2025; EA)
 
 ### Improvements
 
