--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 625 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 626 fixed issues.
 
 ## 7.3.20
 
@@ -25,6 +25,12 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21455` -- High -- Fix parsing of L2 VXLAN related properties on Juniper QFX switches
 - `NIM-21457` -- Highest -- Incorrect command to get full vrf routing tables nx-os
 - `NIM-21512` -- Highest -- Cisco missing routing table vrf commands when BGP threshold is disabled
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-19977` -- Medium -- Extend upgrade package/service e2e tests in qa-tests
 
 ## 7.3.19
 
