--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,51 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 882 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 911 fixed issues.
+
+## 7.5.9
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21313` -- Medium -- siteName column missing from tables
+- `NIM-21407` -- Highest -- Attribute filter does not work for hosts table
+- `NIM-21505` -- High -- AWS Path lookup failing on IPF 7.5 due to some DXGW BGP routes missing
+- `NIM-21537` -- Highest -- Can't configure credential without username on IPF >=7.3
+- `NIM-21582` -- High -- Juniper - Login/MOTD Banner support
+- `NIM-21606` -- High -- ACI Path lookup failing on `Traffic loop detected.`
+- `NIM-21617` -- Highest -- ArangoDB data from loaded snapshots remains on disk after 7.3 -> 7.5 upgrade
+- `NIM-21619` -- High -- Slow PSQL query log from IPF API contains no timestamp in JSON
+- `NIM-21652` -- High -- Arista VXLAN tasks/l2interfaces fail due to vlan interface with id over 4095
+- `NIM-21657` -- High -- ArubaCX - LLDP remote interface incorrect, affecting xDP links between AP and switch
+- `NIM-21658` -- Highest -- RBAC removed from many endpoints
+- `NIM-21676` -- Medium -- MAC Address not formatted correctly on 7.3
+- `NIM-21682` -- High -- Read Only user can't view graphs - Unexpected Failure
+- `NIM-21685` -- Medium -- User with insufficient access rights should not see the Backup & Maintenance page menu item
+- `NIM-21696` -- Medium -- Azure VirtualNetworkGateway - omit IPv6 address ranges
+- `NIM-21716` -- Medium -- HP IAP - Couldn't validate client with the IP address: 172.19.22.213, "wirelessInfo.protocol" is required
+- `NIM-21717` -- Highest -- New getUnscannedPrefixes query takes too long with full IPv4 BGP table
+- `NIM-21724` -- High -- [7.5] - Cisco ACI: APIC model reports % sign
+- `NIM-21770` -- High -- Vendor API connectivity tester doesn't work on new snapshot settings page
+- `NIM-21796` -- Medium -- ABParseError: Unknown status code: R
+- `NIM-21803` -- Medium -- ABParseError: Problem parsing neighbor on port (1/1/1): "neiIp" contains an invalid value
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21615` -- High -- Compare 7.3 & 7.5 performance on minimal configuration
+- `NIM-21616` -- High -- Compare 7.3 & 7.5 performance on medium configuration
+- `NIM-21666` -- Highest -- Update the UI message to notify customers about increased number of loaded snapshots
+- `NIM-21670` -- Highest -- Add analyze total duration metric
+
+### Sub-Tasks
+
+Sub-tasks are very well contained work packages, organized under Tasks.
+
+- `NIM-21763` -- Medium -- Paloalto parsing issue - Error in parsing of application, configuration contains two application sections.
+- `NIM-21767` -- Medium -- Paloalto parsing issue - Details for authentication profile dow.tacacs.profile not found
 
 ## 7.5.8
 
@@ -17,6 +61,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9638` -- Medium -- cisco stack - environment information (power supplies and fans)
 - `NIM-15077` -- Highest -- AWS TGW - VPC attachment routes refactor (static & propagated)
 - `NIM-15229` -- High -- Investigate wrong BGP neighbor information in BGP Neighbors table when devices have same IPs (blocked - pending PSQL query refactor)
+- `NIM-20966` -- Highest -- Scanner not working as expected.
 - `NIM-21068` -- High -- Inventory - EoL Milestones - Duplicate entries still seen
 - `NIM-21071` -- High -- Path Lookup shows incorrect Passing Traffic value
 - `NIM-21173` -- Highest -- Cisco ACI - get correct sPcTag for transparent firewall on ingress leaf
@@ -404,6 +449,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-12702` -- Medium -- API convert controllers to PSQL
 - `NIM-15669` -- Highest -- Arango -> PSQL Upgrade Process [7.5]
 - `NIM-15816` -- High -- Fix queries failing tests
+- `NIM-16494` -- High -- Prepare for PSQL stable release
 - `NIM-17027` -- High -- Transparent FW
 - `NIM-17401` -- High -- Support for IPv6 in GUI
 - `NIM-17744` -- Medium -- OAS Improvements
@@ -415,7 +461,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
-- `NIM-18984` -- Medium -- Cloud subnets discovery
+- `NIM-18984` -- Medium -- Cloud subnets discovery 7.8
 - `NIM-19003` -- Medium -- v6 support for BGP Advertised Routing task
 - `NIM-19078` -- Medium -- Syslogworker improvements
 - `NIM-19087` -- High -- Fix PSQL Pathlookup Failing Tests
