MQ-8874: Checksums record correction

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -112,6 +112,7 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
 ## v7.5.9 (October 14th, 2025; EA)
 
 ```
+SHA256 (ipfabric-update-7-5-9+0.tar.zst.sig) = 44c3e804b243630171bcf466f90040678a3e96177adc5eb99608a78d724d99c0
 MD5 (ipfabric-update-7-5-9+0.tar.zst.sig) = 3e53d832dc42d42b1ca3e46edded3a81
 SHA256 (ipfabric-7-5-9+0.qcow2) = 0b1e05e654ff838a9a2af81e8b95a42cd83e76ac4c00bec3dda5a3a80ada92e7
 MD5 (ipfabric-7-5-9+0.qcow2) = 26d805f32bb133d33dfa3a5c0b132f5f
