NAE/NIM-19640-nae-docs-release-notes-update-i-pv-6-pan-os-7.8

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -51,9 +51,11 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 #### Vendor Support and Improvements
 
+- Added IPv6 support for the Palo Alto, AAA, NTP, SNMP, Syslog and OSPFv3 tasks.
 - **Aruba IAP - AOS 10+**
   - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
+
 
 ### API Changes
 
