NIM-20559 Device attributes import/export [7.8]

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -31,7 +31,7 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 ### New Features
 
-.
+- **Device Attributes Import/Export:** Added the ability to bulk import and export device attributes using CSV files for easier management.
 
 ### Improvements
 
