--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -51,7 +51,8 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 #### Vendor Support and Improvements
 
-- Added IPv6 support for the Palo Alto, AAA, NTP, SNMP, Syslog and OSPFv3 tasks.
+- Added IPv6 support for the Palo Alto AAA, NTP, SNMP, Syslog and OSPFv3 tasks.
+- Added IPv6 support for the Cisco NX-OS AAA, ACL, SNMP and Syslog tasks.
 - **Aruba IAP - AOS 10+**
   - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
