NIM-21749 Document asplain feature flag

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -401,7 +401,7 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
   - Identification: Firmware prefix `CS` and Monitoring Version (if present) must not be `1` - as `1` indicates the device in monitor-only mode.  
-  - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md#meraki-catalyst-switches-discovery).
+  - Discovery can be disabled via [configuration flags](../../System_Administration/Command_Line_Interface/Configuration_Flags.md#meraki-catalyst-switches-discovery).
 
 #### Path Lookup
 
