--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -72,4 +72,4 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 ### Miscellaneous
 
-.
+- BGP AS number format can be changed to [ASplain using a Configuration Flag](../../System_Administration/Command_Line_Interface/Configuration_Flags.md#bgp-asplain-notation). 
