Add doc and RN for new table IPv6 Managed IP Summary

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -39,7 +39,9 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 #### Technology Tables
 
-.
+##### New Tables
+
+A new **IPv6 Managed IP Summary** table has been added under **Technology → Addressing → Managed-IP**,
 
 #### GUI
 
