MQ-8879: Release 7.3.22 for GA

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -57,24 +57,38 @@ If you're experiencing extended discovery times (9+ hours), this issue is likely
 
 Processing of `show ip route detail full` commands has improved significantly in version `7.3.20`. You may not experience these issues after the upgrade.
 
-## v7.3.20 (September 15th, 2025; GA)
+## v7.3.22 (October 21th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-3-20+0.tar.zst.sig) = 53a1e4bbe86c5cc1342bc97294cb9f1a50f267fbdccfde87924d598da9191142
-MD5 (ipfabric-update-7-3-20+0.tar.zst.sig) = 59e237c72a0719fca2cd5958fda3a047
-SHA256 (ipfabric-7-3-20+0.qcow2) = 5113f6c86d61ab6cb995f2f02f746697b8c1af94f7f1f7c52d3cffe85ab1429a
-MD5 (ipfabric-7-3-20+0.qcow2) = 51205f748c6ab05b1090090b7e472ce8
-SHA256 (ipfabric-7-3-20+0.vmdk) = 21a5dbfb54e79f1525399f856b98f0b428cec6541c7be074e947dc46f357cf98
-MD5 (ipfabric-7-3-20+0.vmdk) = 5e17aec67b6f58f4a518f92591c6812c
-SHA256 (ipfabric-7-3-20+0.vhdx.zst) = c25125c5072688f460439b1c66b77145cd3045d0e2c7797cf79410fc73e62198
-MD5 (ipfabric-7-3-20+0.vhdx.zst) = 9e5260d64a3c4d4ee905a278ffba00ba
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-20+0.ova) = b72983fd0ae4a2e8d65691bba68dd17f300ab61fd1e2d31d6f565b76170d62f8
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-20+0.ova) = 27a5d4006ad4af714669335c99dcc1a9
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-20+0.ova) = 3f7432d549e8b6af210e1d7aacb3633e301674d37a0ae42499569a13844c6b98
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-20+0.ova) = 7f688b7b6c283162a9844d36f2d8aaaa
-SHA256 (ESXi8.0-ipfabric-7-3-20+0.ova) = 30a1dc26698c1626f793526cd5ab80203d00af78535ac51f5d0339cf72d96113
-MD5 (ESXi8.0-ipfabric-7-3-20+0.ova) = ac7a53c50136655301da90da45842b75
+SHA256 (ipfabric-update-7-3-22+1.tar.zst.sig) = 81ccddf60bdce7145f194a77bf908658822b17c39a9897946e29097af773bd21
+MD5 (ipfabric-update-7-3-22+1.tar.zst.sig) = e33f5efd1adb45c0012f8d7ad81e1de5
+SHA256 (ipfabric-7-3-22+1.qcow2) = d694322cc14488d9833c17ed4a97b4cc3a6c1e21a3ec098bfd1262677e95962f
+MD5 (ipfabric-7-3-22+1.qcow2) = c8ad46890572b68bc7f01ba734c0e195
+SHA256 (ipfabric-7-3-22+1.vmdk) = 4a9b13a7a608d3c9c4bf71dc817a3aee763d419bd6bdfc78bcd70e180bdb977a
+MD5 (ipfabric-7-3-22+1.vmdk) = 57211686ea4cdac7a7320aabe4196c2a
+SHA256 (ipfabric-7-3-22+1.vhdx.zst) = 5985d59b0e919fc5e428fc218aa6b063d9c70d7094fb8b0caabca80a9b3620d4
+MD5 (ipfabric-7-3-22+1.vhdx.zst) = f7f225723b3a4cab3bf465bd4bf2fa58
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-22+1.ova) = 1977b9c9e91cd700f5a128f2bf56db636ede9f2bc0dee79c75242a49e7a5b470
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-22+1.ova) = b7f1ad77742cda24c84c45459e4ce0b3
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-22+1.ova) = 0b9609fdddf5f8b674b14c1a15915d2aacb4a75fa6cf6712bf1069160c912b5b
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-22+1.ova) = ee110526906ca10b5797fb7dc883165c
+SHA256 (ESXi8.0-ipfabric-7-3-22+1.ova) = 5ecbcee1ca51fab17a6fecd708037e910f5608bd2298deb03f09a3b3b5859c3c
+MD5 (ESXi8.0-ipfabric-7-3-22+1.ova) = 94037ff33be580c5dc53e26cb7ecbbd3
 ```
+
+### Improvements
+
+- Path Lookup traffic values and loop detection.
+- FortiGate and Cisco ACI E2E policy evaluation issues.
+- Logging for Azure Vendor API tasks.
+
+### Fixes
+
+- GCP Inventory table loading error.
+- Credential setup without username
+- MAC address formatting and missing Juniper MAC table data.
+- 
+## v7.3.20 (September 15th, 2025; GA)
 
 ### Improvements
 
