--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,38 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 626 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 645 fixed issues.
+
+## 7.3.21
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20848` -- High -- Worker logs for task or command finished doesn't include enough information for Azure Vendor API
+- `NIM-20934` -- Medium -- IsUnlicensed column not exist in 7.3 PSQL
+- `NIM-21071` -- High -- Path Lookup shows incorrect Passing Traffic value
+- `NIM-21313` -- Medium -- siteName column missing from tables
+- `NIM-21351` -- Highest -- Fortigate - E2EPL FW eval is deny but explicit allow policy is present
+- `NIM-21456` -- High -- Default Policy OTHERS does not allow user to see Pathlookup
+- `NIM-21470` -- Medium -- E2E PL - Cisco ACI - failed to load graph
+- `NIM-21504` -- Highest -- E2E PL: ACI switching mode instead of routing
+- `NIM-21537` -- Highest -- Can't configure credential without username on IPF >=7.3
+- `NIM-21571` -- Medium -- Cannot Copy/Paste from Excel into IP Lists
+- `NIM-21606` -- High -- ACI Path lookup failing on `Traffic loop detected.`
+- `NIM-21676` -- Medium -- MAC Address not formatted correctly on 7.3
+- `NIM-21681` -- High -- Manual upgrade - app not refreshed after upgrade
+- `NIM-21815` -- High -- Addressing -> MAC Table is empty for Juniper devices
+- `NIM-21835` -- High -- GCP Inventory table does not load with column dev.attributes does not exist error
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-19588` -- Medium -- 8 - Important: Update `expect` to do not log passwords
+- `NIM-21615` -- High -- Compare 7.3 & 7.5 performance on minimal configuration
+- `NIM-21616` -- High -- Compare 7.3 & 7.5 performance on medium configuration
+- `NIM-21648` -- Medium -- Update IPF Checker with IOPS values
 
 ## 7.3.20
 
