--- a/docs/releases/release_notes/7.6.md
+++ b/docs/releases/release_notes/7.6.md
@@ -2,12 +2,7 @@
 description: In this section, you can find the release notes for `v7.6` releases.
 ---
 
-# IP Fabric `v7.6`
-
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
+# IP Fabric v7.6
 
 --8<-- "snippets/upgrade_version_policy.md"
 
@@ -15,43 +10,50 @@ description: In this section, you can find the release notes for `v7.6` releases
 
 ## Known Issues
 
-.
+There are currently no known issues in IP Fabric version 7.6.
 
-## `v7.6.X` (UNRELEASED)
+## v7.6.1 (October 27th, 2025, Private Release)
 
-.
+### Potential Race Conditions and File Conflicts During Upgrade
 
-### Fixes
+A race condition in the appliance upgrade process could cause misleading error messages during upgrades.
+We also fixed cases where upgrades could fail due to configuration files that had been incorrectly created or modified in the past.
+Both issues are now resolved and should no longer occur.
 
-.
+### Removal of ArangoDB
 
-## `v7.6.0` (UNRELEASED)
-
-.
+ArangoDB has been completely removed in this release, including all related dependencies and custom configuration options.
 
 ### New Features
 
-.
+#### System upgrade via CLI
+
+A new command-line tool `/opt/ipf-system-upgrade/bin/cli` now enables performing system upgrades in the same way as through the web interface.
 
 ### Improvements
 
-.
+#### API logging
 
-#### Technology Tables
+The `ipf-api` component now writes logs to `/var/log/ipf/ipf-api/` instead of forwarding them to syslog.
 
-.
+#### Improved PostgreSQL Migration Process
 
-#### GUI
+We have addressed edge cases where PostgreSQL might not have been configured correctly during upgrades.
+Additional checks and safeguards now ensure consistent and reliable system configuration.
+The installation process has also been improved to better handle dependencies between the product and PostgreSQL.
 
-.
+#### Simplified TechSupport Exports
 
-#### Path Lookup
+Logs from cloud-init are now excluded from TechSupport exports.
 
-.
+#### Additional Disk-space Checks During Upgrade
 
-#### Vendor Support
+Added a pre-upgrade check for available disk space to prevent the appliance from running out of space during an upgrade.
 
-.
+#### Jumphost Logs Included in TechSupport Exports
+
+The `ipf-jumphost` service, which has logged to `/var/log/ipf/ipf-jumphost/` since release 7.0 to keep its logs separate from system logs, now includes
+these logs in TechSupport exports to assist with troubleshooting.
 
 ### API Changes
 
@@ -67,15 +69,3 @@ The payload size limit has been introduced with a default of 20 MB, except for t
 - `/graphs/vsdx` -> 25 MB
 - `/os/upload-nimpee-cert` -> 5 MB
 - `/settings` (PATCH) -> 100 MB
-
-### API Endpoint Deprecation
-
-.
-
-### Experimental Features
-
-.
-
-### Miscellaneous
-
-.
